# busobj

./: CMakeLists.txt  CMakePresets.json
busobj/: CMakeLists.txt  bus-client.c  bus-server.c  bus-service.c  busobj.c  busobj.h  objmgr-types.hpp  objmgr.cpp  objpeer.cpp  sd-event-udp.c  test-vtable.c
busobj/mini/: bus-message.c  escape.c  fd-util.c  fileio.c  hashmap.c  locale-util.c  log.c  path-util.c  randombytes.c  sd-bus.c  sd-event.c  socket-util.c  string-util.c  strv.c  time-util.c
busobj/sdbusplus/include/sdbusplus/: bus.hpp  message.hpp
busobj/sdbusplus/include/sdbusplus/asio/: connection.hpp
busobj/sdbusplus/include/sdbusplus/server/: transaction.hpp
busobj/sdbusplus/include/sdbusplus/utility/: container_traits.hpp  memory.hpp
busobj/sdbusplus/src/: exception.cpp
busobj/systemd/src/basic/: alloc-util.h  audit-util.h  cgroup-util.h  errno-from-name.h  fd-util.c  fd-util.h  fileio.h  fs-util.h  glyph-util.c  locale-util.h  log.h  macro.h  memory-util.c  memory-util.h  missing_sched.h  missing_syscall.h  parse-util.c  parse-util.h  path-util.h  prioq.c  proc-cmdline.h  process-util.h  socket-util.h  sort-util.h  sparse-endian.h  stdio-util.h  string-util.h  strv.h  time-util.h  unaligned.h  user-util.h  util.h
busobj/systemd/src/busctl/: test-busctl-introspect.c
busobj/systemd/src/fundamental/: macro-fundamental.h
busobj/systemd/src/libsystemd/sd-bus/: bus-convenience.c  bus-creds.c  bus-dump.c  bus-error.c  bus-gvariant.c  bus-internal.c  bus-internal.h  bus-introspect.c  bus-match.c  bus-objects.c  bus-socket.c  bus-track.c  sd-bus.c  test-bus-marshal.c
busobj/systemd/src/libsystemd/sd-daemon/: sd-daemon.c
busobj/systemd/src/libsystemd/sd-event/: sd-event.c
busobj/systemd/src/libsystemd/sd-id128/: id128-util.c  sd-id128.c
busobj/systemd/src/shared/: bus-print-properties.c  varlink.c  xml.c
busobj/systemd/src/systemd/: _sd-common.h  sd-bus.h
busobj/test/: test-socketpair.cpp
busobj/windows/: WixUI_Minimal_NoEULA.wxs  WixUI_fio.wxl  compat.c  dobuild.cmd  getuid.cpp  machine-guid.c  poll.c  posix.c  socket.c  strndup.c  win_clock_gettime.c  win_clock_gettime.h
busobj/windows/posix/include/: endian.h  syslog.h  unistd.h
busobj/windows/posix/include/sys/: resource.h  socket.h
busobj/windows/wepoll/: getuid.cpp  wepoll.c
